[project]
name = "comfyui-FSampler"
description = "FSampler is a training-free, sampler-agnostic acceleration layer for diffusion sampling that reduces model calls by predicting each step's epsilon (noise) from recent real calls. Provides fixed history modes (h2/h3/h4) and adaptive mode for 40-60%+ speedup."
version = "1.0.2"
license = { text = "GPL-3.0-only" }

[project.urls]
Repository = "https://github.com/obisin/ComfyUI-FSampler"

[tool.comfy]
PublisherId = "obisin"
DisplayName = "FSampler - Fast Diffusion Sampling via Epsilon Extrapolation"
Icon = ""

[[tool.comfy.nodelist]]
id = "FSamplerAdvanced"
display_name = "FSampler Advanced"

[[tool.comfy.nodelist]]
id = "FSampler"
display_name = "FSampler"
